parser.output
Terminals unused in grammar

    TOKEN_EOF
    TOKEN_SKIP
    TOKEN_INCREMENT
    TOKEN_DECREMENT
    TOKEN_LOGAND
    TOKEN_LOGOR
    TOKEN_COMMENT
    TOKEN_OCOMMENT
    TOKEN_CCOMMENT
    TOKEN_WHILE
    TOKEN_IF
    TOKEN_ELSE
    TOKEN_PRINT
    LT
    TOKEN_ERROR


State 45 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: programs
    2        | %empty

    3 programs: func

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT param TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET
    5     | TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET

    6 param: TOKEN_IDENT TOKEN_COLON type
    7      | TOKEN_IDENT TOKEN_COLON type ", " param

    8 body: line TOKEN_RETURN TOKEN_IDENT TOKEN_SEMICOLON
    9     | line TOKEN_RETURN TOKEN_NUMBER TOKEN_SEMICOLON
   10     | line

   11 line: expr TOKEN_SEMICOLON
   12     | expr TOKEN_SEMICOLON line

   13 expr: assign
   14     | term compare term
   15     | term TOKEN_ADD term
   16     | term TOKEN_SUBTRACT term
   17     | term
   18     | TOKEN_QUOTE expr TOKEN_QUOTE

   19 assign: TOKEN_IDENT TOKEN_COLON type
   20       | TOKEN_IDENT TOKEN_COLON type TOKEN_ASS line
   21       | TOKEN_IDENT TOKEN_ASS expr

   22 term: term TOKEN_STAR factor
   23     | term TOKEN_DIVIDE factor
   24     | factor

   25 compare: EQ
   26        | GT
   27        | GE
   28        | LE
   29        | NE

   30 factor: TOKEN_SUBTRACT factor
   31       | TOKEN_IDENT
   32       | TOKEN_TRUE
   33       | TOKEN_FALSE
   34       | TOKEN_NUMBER

   35 type: TOKEN_VOID
   36     | TOKEN_INTEGER
   37     | TOKEN_STRING
   38     | TOKEN_BOOLEAN
   39     | TOKEN_CHAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_EOF (258)
    TOKEN_SKIP (259)
    TOKEN_LPARENT (260) 4 5
    TOKEN_RPARENT (261) 4 5
    TOKEN_LBRACKET (262) 4 5
    TOKEN_RBRACKET (263) 4 5
    TOKEN_SEMICOLON (264) 8 9 11 12
    TOKEN_COLON (265) 4 5 6 7 19 20
    TOKEN_STAR (266) 22
    TOKEN_ADD (267) 15
    TOKEN_SUBTRACT (268) 16 30
    TOKEN_DIVIDE (269) 23
    TOKEN_INCREMENT (270)
    TOKEN_DECREMENT (271)
    TOKEN_LOGAND (272)
    TOKEN_LOGOR (273)
    TOKEN_QUOTE (274) 18
    TOKEN_COMMENT (275)
    TOKEN_OCOMMENT (276)
    TOKEN_CCOMMENT (277)
    TOKEN_WHILE (278)
    TOKEN_IF (279)
    TOKEN_ELSE (280)
    TOKEN_FUNCTION (281) 4 5
    TOKEN_VOID (282) 35
    TOKEN_INTEGER (283) 36
    TOKEN_BOOLEAN (284) 38
    TOKEN_CHAR (285) 39
    TOKEN_STRING (286) 37
    TOKEN_TRUE (287) 32
    TOKEN_FALSE (288) 33
    TOKEN_PRINT (289)
    TOKEN_RETURN (290) 8 9
    TOKEN_IDENT (291) 4 5 6 7 8 19 20 21 31
    TOKEN_NUMBER (292) 9 34
    TOKEN_ASS (293) 4 5 20 21
    GT (294) 26
    LT (295)
    GE (296) 27
    LE (297) 28
    EQ (298) 25
    NE (299) 29
    TOKEN_ERROR (300)
    ", " (301) 7


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program <decl> (48)
        on left: 1 2
        on right: 0
    programs <decl> (49)
        on left: 3
        on right: 1
    func <decl> (50)
        on left: 4 5
        on right: 3
    param (51)
        on left: 6 7
        on right: 4 7
    body <decl> (52)
        on left: 8 9 10
        on right: 4 5
    line <decl> (53)
        on left: 11 12
        on right: 8 9 10 12 20
    expr <decl> (54)
        on left: 13 14 15 16 17 18
        on right: 11 12 18 21
    assign <type> (55)
        on left: 19 20 21
        on right: 13
    term <expr> (56)
        on left: 22 23 24
        on right: 14 15 16 17 22 23
    compare <stmt> (57)
        on left: 25 26 27 28 29
        on right: 14
    factor <stmt> (58)
        on left: 30 31 32 33 34
        on right: 22 23 24 30
    type <type> (59)
        on left: 35 36 37 38 39
        on right: 4 5 6 7 19 20


State 0

    0 $accept: . program $end

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 2 (program)

    program   go to state 2
    programs  go to state 3
    func      go to state 4


State 1

    4 func: TOKEN_IDENT . TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT param TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET
    5     | TOKEN_IDENT . TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_COLON  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: programs .

    $default  reduce using rule 1 (program)


State 4

    3 programs: func .

    $default  reduce using rule 3 (programs)


State 5

    4 func: TOKEN_IDENT TOKEN_COLON . TOKEN_FUNCTION type TOKEN_LPARENT param TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET
    5     | TOKEN_IDENT TOKEN_COLON . TOKEN_FUNCTION type TOKEN_LPARENT TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_FUNCTION  shift, and go to state 7


State 6

    0 $accept: program $end .

    $default  accept


State 7

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION . type TOKEN_LPARENT param TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET
    5     | TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION . type TOKEN_LPARENT TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_VOID     shift, and go to state 8
    TOKEN_INTEGER  shift, and go to state 9
    TOKEN_BOOLEAN  shift, and go to state 10
    TOKEN_CHAR     shift, and go to state 11
    TOKEN_STRING   shift, and go to state 12

    type  go to state 13


State 8

   35 type: TOKEN_VOID .

    $default  reduce using rule 35 (type)


State 9

   36 type: TOKEN_INTEGER .

    $default  reduce using rule 36 (type)


State 10

   38 type: TOKEN_BOOLEAN .

    $default  reduce using rule 38 (type)


State 11

   39 type: TOKEN_CHAR .

    $default  reduce using rule 39 (type)


State 12

   37 type: TOKEN_STRING .

    $default  reduce using rule 37 (type)


State 13

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type . TOKEN_LPARENT param TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET
    5     | TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type . TOKEN_LPARENT TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_LPARENT  shift, and go to state 14


State 14

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT . param TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET
    5     | TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT . TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_RPARENT  shift, and go to state 15
    TOKEN_IDENT    shift, and go to state 16

    param  go to state 17


State 15

    5 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT TOKEN_RPARENT . TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_ASS  shift, and go to state 18


State 16

    6 param: TOKEN_IDENT . TOKEN_COLON type
    7      | TOKEN_IDENT . TOKEN_COLON type ", " param

    TOKEN_COLON  shift, and go to state 19


State 17

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT param . TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_RPARENT  shift, and go to state 20


State 18

    5 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT TOKEN_RPARENT TOKEN_ASS . TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 21


State 19

    6 param: TOKEN_IDENT TOKEN_COLON . type
    7      | TOKEN_IDENT TOKEN_COLON . type ", " param

    TOKEN_VOID     shift, and go to state 8
    TOKEN_INTEGER  shift, and go to state 9
    TOKEN_BOOLEAN  shift, and go to state 10
    TOKEN_CHAR     shift, and go to state 11
    TOKEN_STRING   shift, and go to state 12

    type  go to state 22


State 20

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT param TOKEN_RPARENT . TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_ASS  shift, and go to state 23


State 21

    5 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET . body TOKEN_RBRACKET

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_QUOTE     shift, and go to state 25
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 28
    TOKEN_NUMBER    shift, and go to state 29

    body    go to state 30
    line    go to state 31
    expr    go to state 32
    assign  go to state 33
    term    go to state 34
    factor  go to state 35


State 22

    6 param: TOKEN_IDENT TOKEN_COLON type .
    7      | TOKEN_IDENT TOKEN_COLON type . ", " param

    ", "  shift, and go to state 36

    $default  reduce using rule 6 (param)


State 23

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT param TOKEN_RPARENT TOKEN_ASS . TOKEN_LBRACKET body TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 37


State 24

   30 factor: TOKEN_SUBTRACT . factor

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 38
    TOKEN_NUMBER    shift, and go to state 29

    factor  go to state 39


State 25

   18 expr: TOKEN_QUOTE . expr TOKEN_QUOTE

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_QUOTE     shift, and go to state 25
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 28
    TOKEN_NUMBER    shift, and go to state 29

    expr    go to state 40
    assign  go to state 33
    term    go to state 34
    factor  go to state 35


State 26

   32 factor: TOKEN_TRUE .

    $default  reduce using rule 32 (factor)


State 27

   33 factor: TOKEN_FALSE .

    $default  reduce using rule 33 (factor)


State 28

   19 assign: TOKEN_IDENT . TOKEN_COLON type
   20       | TOKEN_IDENT . TOKEN_COLON type TOKEN_ASS line
   21       | TOKEN_IDENT . TOKEN_ASS expr
   31 factor: TOKEN_IDENT .

    TOKEN_COLON  shift, and go to state 41
    TOKEN_ASS    shift, and go to state 42

    $default  reduce using rule 31 (factor)


State 29

   34 factor: TOKEN_NUMBER .

    $default  reduce using rule 34 (factor)


State 30

    5 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body . TOKEN_RBRACKET

    TOKEN_RBRACKET  shift, and go to state 43


State 31

    8 body: line . TOKEN_RETURN TOKEN_IDENT TOKEN_SEMICOLON
    9     | line . TOKEN_RETURN TOKEN_NUMBER TOKEN_SEMICOLON
   10     | line .

    TOKEN_RETURN  shift, and go to state 44

    $default  reduce using rule 10 (body)


State 32

   11 line: expr . TOKEN_SEMICOLON
   12     | expr . TOKEN_SEMICOLON line

    TOKEN_SEMICOLON  shift, and go to state 45


State 33

   13 expr: assign .

    $default  reduce using rule 13 (expr)


State 34

   14 expr: term . compare term
   15     | term . TOKEN_ADD term
   16     | term . TOKEN_SUBTRACT term
   17     | term .
   22 term: term . TOKEN_STAR factor
   23     | term . TOKEN_DIVIDE factor

    TOKEN_STAR      shift, and go to state 46
    TOKEN_ADD       shift, and go to state 47
    TOKEN_SUBTRACT  shift, and go to state 48
    TOKEN_DIVIDE    shift, and go to state 49
    GT              shift, and go to state 50
    GE              shift, and go to state 51
    LE              shift, and go to state 52
    EQ              shift, and go to state 53
    NE              shift, and go to state 54

    $default  reduce using rule 17 (expr)

    compare  go to state 55


State 35

   24 term: factor .

    $default  reduce using rule 24 (term)


State 36

    7 param: TOKEN_IDENT TOKEN_COLON type ", " . param

    TOKEN_IDENT  shift, and go to state 16

    param  go to state 56


State 37

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT param TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET . body TOKEN_RBRACKET

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_QUOTE     shift, and go to state 25
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 28
    TOKEN_NUMBER    shift, and go to state 29

    body    go to state 57
    line    go to state 31
    expr    go to state 32
    assign  go to state 33
    term    go to state 34
    factor  go to state 35


State 38

   31 factor: TOKEN_IDENT .

    $default  reduce using rule 31 (factor)


State 39

   30 factor: TOKEN_SUBTRACT factor .

    $default  reduce using rule 30 (factor)


State 40

   18 expr: TOKEN_QUOTE expr . TOKEN_QUOTE

    TOKEN_QUOTE  shift, and go to state 58


State 41

   19 assign: TOKEN_IDENT TOKEN_COLON . type
   20       | TOKEN_IDENT TOKEN_COLON . type TOKEN_ASS line

    TOKEN_VOID     shift, and go to state 8
    TOKEN_INTEGER  shift, and go to state 9
    TOKEN_BOOLEAN  shift, and go to state 10
    TOKEN_CHAR     shift, and go to state 11
    TOKEN_STRING   shift, and go to state 12

    type  go to state 59


State 42

   21 assign: TOKEN_IDENT TOKEN_ASS . expr

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_QUOTE     shift, and go to state 25
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 28
    TOKEN_NUMBER    shift, and go to state 29

    expr    go to state 60
    assign  go to state 33
    term    go to state 34
    factor  go to state 35


State 43

    5 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET .

    $default  reduce using rule 5 (func)


State 44

    8 body: line TOKEN_RETURN . TOKEN_IDENT TOKEN_SEMICOLON
    9     | line TOKEN_RETURN . TOKEN_NUMBER TOKEN_SEMICOLON

    TOKEN_IDENT   shift, and go to state 61
    TOKEN_NUMBER  shift, and go to state 62


State 45

   11 line: expr TOKEN_SEMICOLON .
   12     | expr TOKEN_SEMICOLON . line

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_QUOTE     shift, and go to state 25
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 28
    TOKEN_NUMBER    shift, and go to state 29

    TOKEN_QUOTE  [reduce using rule 11 (line)]
    $default     reduce using rule 11 (line)

    line    go to state 63
    expr    go to state 32
    assign  go to state 33
    term    go to state 34
    factor  go to state 35


State 46

   22 term: term TOKEN_STAR . factor

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 38
    TOKEN_NUMBER    shift, and go to state 29

    factor  go to state 64


State 47

   15 expr: term TOKEN_ADD . term

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 38
    TOKEN_NUMBER    shift, and go to state 29

    term    go to state 65
    factor  go to state 35


State 48

   16 expr: term TOKEN_SUBTRACT . term

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 38
    TOKEN_NUMBER    shift, and go to state 29

    term    go to state 66
    factor  go to state 35


State 49

   23 term: term TOKEN_DIVIDE . factor

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 38
    TOKEN_NUMBER    shift, and go to state 29

    factor  go to state 67


State 50

   26 compare: GT .

    $default  reduce using rule 26 (compare)


State 51

   27 compare: GE .

    $default  reduce using rule 27 (compare)


State 52

   28 compare: LE .

    $default  reduce using rule 28 (compare)


State 53

   25 compare: EQ .

    $default  reduce using rule 25 (compare)


State 54

   29 compare: NE .

    $default  reduce using rule 29 (compare)


State 55

   14 expr: term compare . term

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 38
    TOKEN_NUMBER    shift, and go to state 29

    term    go to state 68
    factor  go to state 35


State 56

    7 param: TOKEN_IDENT TOKEN_COLON type ", " param .

    $default  reduce using rule 7 (param)


State 57

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT param TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body . TOKEN_RBRACKET

    TOKEN_RBRACKET  shift, and go to state 69


State 58

   18 expr: TOKEN_QUOTE expr TOKEN_QUOTE .

    $default  reduce using rule 18 (expr)


State 59

   19 assign: TOKEN_IDENT TOKEN_COLON type .
   20       | TOKEN_IDENT TOKEN_COLON type . TOKEN_ASS line

    TOKEN_ASS  shift, and go to state 70

    $default  reduce using rule 19 (assign)


State 60

   21 assign: TOKEN_IDENT TOKEN_ASS expr .

    $default  reduce using rule 21 (assign)


State 61

    8 body: line TOKEN_RETURN TOKEN_IDENT . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 71


State 62

    9 body: line TOKEN_RETURN TOKEN_NUMBER . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 72


State 63

   12 line: expr TOKEN_SEMICOLON line .

    $default  reduce using rule 12 (line)


State 64

   22 term: term TOKEN_STAR factor .

    $default  reduce using rule 22 (term)


State 65

   15 expr: term TOKEN_ADD term .
   22 term: term . TOKEN_STAR factor
   23     | term . TOKEN_DIVIDE factor

    TOKEN_STAR    shift, and go to state 46
    TOKEN_DIVIDE  shift, and go to state 49

    $default  reduce using rule 15 (expr)


State 66

   16 expr: term TOKEN_SUBTRACT term .
   22 term: term . TOKEN_STAR factor
   23     | term . TOKEN_DIVIDE factor

    TOKEN_STAR    shift, and go to state 46
    TOKEN_DIVIDE  shift, and go to state 49

    $default  reduce using rule 16 (expr)


State 67

   23 term: term TOKEN_DIVIDE factor .

    $default  reduce using rule 23 (term)


State 68

   14 expr: term compare term .
   22 term: term . TOKEN_STAR factor
   23     | term . TOKEN_DIVIDE factor

    TOKEN_STAR    shift, and go to state 46
    TOKEN_DIVIDE  shift, and go to state 49

    $default  reduce using rule 14 (expr)


State 69

    4 func: TOKEN_IDENT TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPARENT param TOKEN_RPARENT TOKEN_ASS TOKEN_LBRACKET body TOKEN_RBRACKET .

    $default  reduce using rule 4 (func)


State 70

   20 assign: TOKEN_IDENT TOKEN_COLON type TOKEN_ASS . line

    TOKEN_SUBTRACT  shift, and go to state 24
    TOKEN_QUOTE     shift, and go to state 25
    TOKEN_TRUE      shift, and go to state 26
    TOKEN_FALSE     shift, and go to state 27
    TOKEN_IDENT     shift, and go to state 28
    TOKEN_NUMBER    shift, and go to state 29

    line    go to state 73
    expr    go to state 32
    assign  go to state 33
    term    go to state 34
    factor  go to state 35


State 71

    8 body: line TOKEN_RETURN TOKEN_IDENT TOKEN_SEMICOLON .

    $default  reduce using rule 8 (body)


State 72

    9 body: line TOKEN_RETURN TOKEN_NUMBER TOKEN_SEMICOLON .

    $default  reduce using rule 9 (body)


State 73

   20 assign: TOKEN_IDENT TOKEN_COLON type TOKEN_ASS line .

    $default  reduce using rule 20 (assign)
